fix: bug in navbar wrap

--- a/style.css
+++ b/style.css
@@ -35,16 +35,19 @@ h1, h2, h3 {
     align-items: center;
     padding: 0 30px;
     max-width: 1100px;
-    margin: 0 auto;
+    border: 2px solid blue;
+    gap: 24px;
 }
 
-@media (max-width:500px){
+@media (max-width:575px){
     .navbar .container {
+        display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
-        justify-content: space-around;
-        flex: 1 1 auto;
-        width: fit-content;
-        height: fit-content;
+        align-items: center;
+        gap: 0;
+        width: 100%;
+        height: 100%;
     }
     
 }
@@ -62,7 +65,8 @@ h1, h2, h3 {
     display: flex;
     justify-content: baseline;
     gap: 26px;
-
+    border: 2px solid red;
+ 
 }
 
 a {
